compiler/testData/multiplatform/classScopes/functionAndPropertyWithSameName/output.txt
-- Common --
Exit code: OK
Output:

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/classScopes/functionAndPropertyWithSameName/jvm.kt:3:14: error: 'actual class Foo : Any' has no corresponding members for expected class members:

    expect val bar: String

    The following declaration is incompatible because callable kinds are different (function vs property):
        actual fun bar(): String

actual class Foo {
             ^
compiler/testData/multiplatform/classScopes/functionAndPropertyWithSameName/jvm.kt:4:16: error: 'actual fun bar(): String' has no corresponding expected declaration
The following declaration is incompatible because callable kinds are different (function vs property):
    expect val bar: String

    actual fun bar(): String = ""
               ^
